--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,11 @@ edition = "2021"
 [dependencies]
 pnet = { version = "0.31.0", features = ["std"] }
 chrono = "0.4.23"
-rpcap = "1.0.0"
+libc = "0.2"
 clap = {version = "4.0.32", features = ["cargo"]}
 tokio = { version = "1.22", features = ["full","macros", "rt-multi-thread"] }
 byteorder = "1.4.3"
 pcap = "1.0.0"
 syslog = "^6.0"
 csv = "1.1"
+nom = "7.1.2"
