--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,7 @@ byteorder = "1.4.3"
 syslog = "^6.0"
 csv = "1.1"
 nom = "7.1.2"
+num_cpus = "1.15.0"
+snafu = "0.7.4"
 serde = "1.0.152"
 serde_json = "1.0.91"
