--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,9 +16,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Install libpcap
+      run: sudo apt-get install -y libpcap-dev
     - name: Build
-      run: cargo build --verbose
+      run: cargo build --release --verbose
     - name: Run tests
       run: cargo test --verbose
-    - name: Run Clippt
-      run: cargo clippy --fix --allow-dirty --allow-staged
+    - name: Run Clippy
+      run: cargo clippy --fix --allow-dirty --allow-staged --release --verbose
