--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,6 +18,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install libpcap
       run: sudo apt-get install -y libpcap-dev
+    - name: Build fluere-plugin
+      run: cd plugin; cargo build --release
     - name: Build
       run: cargo build --release --verbose
     - name: Run tests
