--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,9 +28,12 @@ snafu = "0.7.4"
 serde = "1.0.152"
 serde_json = "1.0.91"
 toml = "0.7.1"
+
 fluere_plugin = { path = "./plugin" }
+fluereflow = { path = "./fluereflow" }
 
 [workspace]
 members = [
-    "plugin"
+    "plugin",
+    "fluereflow"
 ]
