--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,8 @@ serde = "1.0.152"
 serde_json = "1.0.91"
 toml = "0.7.1"
 
-fluere_plugin = { path = "./plugin" }
-fluereflow = { path = "./fluereflow" }
+#fluere_plugin = { path = "./plugin" }
+fluereflow = { path = "./fluereflow", version = "0.2.0"}
 
 [workspace]
 members = [
