--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,10 @@ name = "fluere"
 version = "0.5.0"
 authors = ["Skuld Norniern <skuldnorniern@gmail.com>"]
 edition = "2021"
-description = "Fluere is a cross-platform network tool aimed at pcap sniffing, netflow dump."
+description = "Cross Platform Packet Capture, pcap to Netflow Conversion, Live Netflow Capture Tool"
 readme = "README.md"
 license = "Apache-2.0"
-
+repository = "https://github.com/SkuldNorniern/fluere"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
