chore: add rpm build support added using generate-rpm crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,3 +47,11 @@ buildflags = ["--release"]
 
 [package.metadata.rpm.targets]
 fluere = { path = "/usr/bin/fluere" }
+
+[package.metadata.generate-rpm.requires]
+libpcap = "*"
+
+[package.metadata.generate-rpm]
+assets = [
+    { source = "target/release/fluere", dest = "/usr/bin/fluere", mode = "755" },
+]
