--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ toml = "0.7.1"
 #fluere_plugin = { path = "./plugin" }
 fluereflow = "0.2.0"
 rui = "0.6.1"
+ratatui = { version = "0.22.0", features = ["all-widgets"] }
+crossterm = "0.26.1"
 
 [workspace]
 members = [
