--- a/.drone.yml
+++ b/.drone.yml
@@ -1,8 +1,10 @@
 kind: pipeline
 name: build_pipe
 trigger:
-  branch:
-  - main
+  event:
+  - push
+  - pull_request
+
 steps:
 - name: build
   image: rust:1.71
@@ -15,8 +17,10 @@ steps:
 kind: pipeline
 name: test_pipe
 trigger:
-  branch:
-  - main
+  event:
+  - push
+  - pull_request
+
 steps:
 - name: test
   image: rust:1.71
