ops: add formatter

--- a/sweep.yaml
+++ b/sweep.yaml
@@ -11,3 +11,7 @@ description: 'Fluere is a rust project. follow the conventional commit when comm
 
 docs: {"rustc-dev-guide": "https://rustc-dev-guide.rust-lang.org/conventions.html", "github": "https://gist.github.com/SkuldNorniern/5f641b2898713b2c7721fd0e4efbfdce"}
 # Default Values: https://github.com/sweepai/sweep/blob/main/sweep.yaml
+sandbox:
+  enabled: true
+  image: "Rust"
+  formatter: "cargo fmt; cargo clippy --fix --bin \"fluere\" --allow-dirty --allow-staged"
