--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -39,19 +39,11 @@ jobs:
           override: true
       - name: Install libpcap
         run: sudo apt-get install -y libpcap-dev
-      
-      - name: Install required cargo
-        run: cargo install clippy-sarif sarif-fmt
 
-      - name: Run rust-clippy
-        run:
-          cargo clippy
-          --all-features
-          --message-format=json | clippy-sarif | tee rust-clippy-results.sarif | sarif-fmt
-        continue-on-error: true
-
-      - name: Upload analysis results to GitHub
-        uses: github/codeql-action/upload-sarif@v2
+      - name: Run Clippy and Upload analysis results to GitHub
+      - uses: actions/checkout@v1
+      - run: rustup component add clippy
+      - uses: actions-rs/clippy-check@v1
         with:
-          sarif_file: rust-clippy-results.sarif
-          wait-for-processing: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+          args: --all-features
