--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ fluereflow = "0.2.1"
 ratatui = { version = "0.22.0", features = ["all-widgets"] }
 crossterm = "0.26.1"
 dogstatsd = "0.9.0"
+async-mutex = "1.4.0"
 
 [workspace]
 members = [
