--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,9 @@ tokio = { version = "1.32", features = ["full","macros", "rt-multi-thread"] }
 pnet = { version = "0.34.0", features = ["std"] }
 pnet_macros_support = "0.34.0"
 pnet_macros = "0.34.0"
-pcap = "1.1.0"
+# using custom forked version of pcap-rs for fixing audits
+pcap = { git = "https://github.com/SkuldNorniern/pcap" }
+
 chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
 libc = "0.2"
 byteorder = "1.4.3"
