--- a/fluere-plugin/Cargo.toml
+++ b/fluere-plugin/Cargo.toml
@@ -10,7 +10,9 @@ license = "Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
+ipc-channel = "0.17.0"
+tokio = { version = "1.32", features = ["full","macros", "rt-multi-thread"] }
+fluere-config = { path = "../fluere-config" }
 
 [lib]
 name = "fluere_plugin"
