feat: introduce lua support for fluereflow format

--- a/fluereflow/Cargo.toml
+++ b/fluereflow/Cargo.toml
@@ -10,3 +10,4 @@ keywords = ["netflow", "fluereflow"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rlua = "0.19.7"
