--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,10 +22,8 @@ pcap = { git = "https://github.com/SkuldNorniern/pcap" }
 chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
 libc = "0.2"
 byteorder = "1.4.3"
-syslog = "^6.0"
 csv = "1.1"
 nom = "7.1.2"
-num_cpus = "1.15.0"
 snafu = "0.7.4"
 serde = { version = "1.0.186", features = ["derive"]}
 serde_json = "1.0.91"
@@ -33,13 +31,12 @@ toml = "0.7.1"
 
 fluere_plugin = { path = "./fluere-plugin" }
 fluere-config = { path = "./fluere-config" }
-fluereflow = { version = "0.3.0", path = "./fluereflow" }
+fluereflow = { path = "./fluereflow" }
 
 ratatui = { version = "0.22.0", features = ["all-widgets"] }
 crossterm = "0.26.1"
-dogstatsd = "0.9.0"
 dirs = "5.0.1"
-ipc-channel = "0.17.0"
+
 
 
 [workspace]
