--- a/fluere-plugin/Cargo.toml
+++ b/fluere-plugin/Cargo.toml
@@ -10,9 +10,11 @@ license = "Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ipc-channel = "0.17.0"
 tokio = { version = "1.32", features = ["full","macros", "rt-multi-thread"] }
 fluere-config = { path = "../fluere-config" }
+fluere-plugin-trait = { path = "../fluere-plugin-trait" }
+rlua = "0.19.7"
+fluereflow = { path = "../fluereflow" }
 
 [lib]
 name = "fluere_plugin"
