--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -34,11 +34,7 @@ jobs:
           toolchain: stable
           components: rustfmt, clippy
       - name: Install cargo-audit binary crate
-        uses: actions-rs/install@v0.1
-        with:
-          crate: cargo-audit
-          version: latest
-          use-tool-cache: true
+        uses: cargo install audit
 
       - name: Install libpcap
         run: sudo apt-get install -y libpcap-dev
