--- a/fluere-plugin/Cargo.toml
+++ b/fluere-plugin/Cargo.toml
@@ -16,6 +16,7 @@ fluere-config = { path = "../fluere-config" }
 rlua = "0.19.7"
 fluereflow = { path = "../fluereflow" }
 dirs = "5.0.1"
+mlua = { version = "0.9.1", features = ["lua54", "vendored","async","send"] }
 
 [lib]
 name = "fluere_plugin"
