--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ pnet = { version = "0.34.0", features = ["std"] }
 pnet_macros_support = "0.34.0"
 pnet_macros = "0.34.0"
 # using custom forked version of pcap-rs for fixing audits
-pcap = { git = "https://github.com/SkuldNorniern/pcap" }
+pcap = { git = "https://github.com/SkuldNorniern/pcap", rev= "40f1163"}
 
 chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
 libc = "0.2"
