--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ toml = "0.7.1"
 
 fluere_plugin = { path = "./fluere-plugin" }
 fluere-config = { path = "./fluere-config" }
-fluereflow = { path = "./fluereflow" }
+fluereflow = { version = "0.3.1", path = "./fluereflow" }
 
 ratatui = { version = "0.23.0", features = ["all-widgets"] }
 crossterm = "0.26.1"
