--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fluere"
-version = "0.6.0"
+version = "0.6.1"
 authors = ["Skuld Norniern <skuldnorniern@gmail.com>"]
 edition = "2021"
 description = "Cross Platform Packet Capture, pcap to Netflow Conversion, Live Netflow Capture Tool"
@@ -17,7 +17,7 @@ pnet = { version = "0.34.0", features = ["std"] }
 pnet_macros_support = "0.34.0"
 pnet_macros = "0.34.0"
 # using custom forked version of pcap-rs for fixing audits
-pcap = { git = "https://github.com/SkuldNorniern/pcap", rev= "40f1163"}
+pcap = { version = "1.1.0",git = "https://github.com/SkuldNorniern/pcap", rev= "40f1163"}
 
 chrono = { version = "0.4.29", default-features = false, features = ["clock"] }
 libc = "0.2"
@@ -27,8 +27,8 @@ snafu = "0.7.4"
 serde = { version = "1.0.186", features = ["derive"]}
 toml = "0.7.1"
 
-fluere_plugin = { path = "./fluere-plugin" }
-fluere-config = { path = "./fluere-config" }
+fluere_plugin = { version = "0.1.0", path = "./fluere-plugin" }
+fluere-config = { version = "0.1.0", path = "./fluere-config" }
 fluereflow = { version = "0.3.1", path = "./fluereflow" }
 
 ratatui = { version = "0.23.0", features = ["all-widgets"] }
