--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,14 @@
 /plugin/target/
 /fluereflow/target/
 # folder that contain test files
+/supply-chain/
 /output/
 
 # test file formats
 *.json
 *.xml
 *.csv
+*.txt
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
