--- a/fluere-config/Cargo.toml
+++ b/fluere-config/Cargo.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 description = "Configuration manager for Fluere."
 license = "Apache-2.0"
 keywords = ["netflow", "fluereflow","fluere", "network"]
+categories = ["network-programming"]
 repository = "https://github.com/SkuldNorniern/fluere"
 
 [dependencies]
