--- a/fluere-plugin/Cargo.toml
+++ b/fluere-plugin/Cargo.toml
@@ -7,6 +7,7 @@ description = "Plugin API for Fluere."
 readme = "README.md"
 license = "Apache-2.0"
 keywords = ["netflow", "fluereflow","fluere", "network"]
+categories = ["network-programming"]
 repository = "https://github.com/SkuldNorniern/fluere"
 
 
