build: bump `ratatui`, `serde` add `anyhow`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,13 @@ keywords = ["netflow", "fluereflow","cross-platform", "netflow-collector", "netw
 categories = ["network-programming"]
 repository = "https://github.com/SkuldNorniern/fluere"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 clap = { version = "4.0.32", features = ["cargo"] }
 tokio = { version = "1.32", features = ["full", "macros", "rt-multi-thread"] }
 pnet = { version = "0.34.0", features = ["std"] }
 pnet_macros_support = "0.34.0"
 pnet_macros = "0.34.0"
+
 # using custom forked version of pcap-rs for fixing audits
 pcap = { version = "1.1.0", git = "https://github.com/SkuldNorniern/pcap", rev = "40f1163" }
 
@@ -26,18 +25,19 @@ libc = "0.2"
 csv = "1.1"
 nom = "7.1.2"
 snafu = "0.8.0"
-serde = { version = "1.0.186", features = ["derive"] }
+serde = { version = "1.0.193", features = ["derive"] }
 toml = "0.8.8"
 
 fluere_plugin = { version = "0.1.0", path = "./fluere-plugin" }
 fluere-config = { version = "0.1.2", path = "./fluere-config" }
 fluereflow = { version = "0.3.1", path = "./fluereflow" }
 
-ratatui = { version = "0.23.0", features = ["all-widgets"] }
+ratatui = { version = "0.25.0", features = ["all-widgets"] }
 crossterm = "0.26.1"
 dirs = "5.0.1"
 logs = "0.7.1"
 env_logger = "0.10.0"
+anyhow = "1.0.79"
 
 
 [workspace]
