--- a/fluere-plugin/Cargo.toml
+++ b/fluere-plugin/Cargo.toml
@@ -21,6 +21,7 @@ fluere-config = { version = "0.1.2", path = "../fluere-config" }
 fluereflow = { version = "0.3.2", path = "../fluereflow" }
 dirs = "5.0.1"
 mlua = { version = "0.9.2", features = ["lua54", "vendored","async","send"] }
+inksac = "0.4.0"
 
 [lib]
 name = "fluere_plugin"
