--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,8 +35,7 @@ fluereflow = { version = "0.3.2", path = "./fluereflow" }
 ratatui = { version = "0.25.0", features = ["all-widgets"] }
 crossterm = "0.27"
 dirs = "5.0.1"
-logs = "0.7.1"
-env_logger = "0.10.0"
+log = "0.4.20"
 
 [workspace]
 members = [
