--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,9 @@ pnet_macros_support = "0.34.0"
 pnet_macros = "0.34.0"
 
 # using custom forked version of pcap-rs for fixing audits
-pcap = { version = "1.1.0", git = "https://github.com/SkuldNorniern/pcap", rev = "40f1163" }
+# pcap = { version = "1.1.0", git = "https://github.com/SkuldNorniern/pcap", rev = "40f1163" }
+
+pcap = "1.2.0"
 
 chrono = { version = "0.4.29", default-features = false, features = ["clock"] }
 libc = "0.2"
@@ -35,7 +37,7 @@ fluereflow = { version = "0.3.2", path = "./fluereflow" }
 ratatui = { version = "0.25.0", features = ["all-widgets"] }
 crossterm = "0.27"
 dirs = "5.0.1"
-log = "0.4.20"
+log = { version = "0.4.21", features = ["std"]}
 
 [workspace]
 members = [
