--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ snafu = "0.8.0"
 serde = { version = "1.0.193", features = ["derive"] }
 toml = "0.8.8"
 
-fluere_plugin = { version = "0.1.1", path = "./fluere-plugin" }
+fluere_plugin = { version = "0.1.1", path = "./fluere-plugin", features = ["log"] }
 fluere-config = { version = "0.1.3", path = "./fluere-config" }
 fluereflow = { version = "0.3.2", path = "./fluereflow" }
 
