--- a/fluere-plugin/Cargo.toml
+++ b/fluere-plugin/Cargo.toml
@@ -23,5 +23,11 @@ dirs = "5.0.1"
 mlua = { version = "0.9.2", features = ["lua54", "vendored","async","send"] }
 inksac = "0.4.0"
 
+log = { version = "0.4.21", features = ["std"], optional = true }
+
 [lib]
 name = "fluere_plugin"
+
+
+[features]
+log = ["dep:log"]
