--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ serde = { version = "1.0.193", features = ["derive"] }
 toml = "0.8.8"
 
 fluere_plugin = { version = "0.2.0", path = "./fluere-plugin", features = ["log"] }
-fluere-config = { version = "0.1.3", path = "./fluere-config" }
+fluere-config = { version = "0.1.3", path = "./fluere-config", features = ["log"] }
 fluereflow = { version = "0.3.2", path = "./fluereflow" }
 
 ratatui = { version = "0.25.0", features = ["all-widgets"] }
