--- a/fluere-config/Cargo.toml
+++ b/fluere-config/Cargo.toml
@@ -13,7 +13,11 @@ repository = "https://github.com/SkuldNorniern/fluere"
 dirs = "5.0.1"
 serde = { version = "1.0.193", features = ["derive"]}
 toml = "0.8.8"
+log = { version = "0.4.21", features = ["std"], optional = true }
 
 [lib]
 name = "fluere_config"
 
+
+[features]
+log = ["dep:log"]
