--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ ratatui = { version = "0.26.1", features = ["all-widgets"] }
 crossterm = "0.27"
 dirs = "5.0.1"
 log = { version = "0.4.21", features = ["std"]}
+indicatif = "0.17.8"
 
 [workspace]
 members = [
