--- a/fluere-plugin/Cargo.toml
+++ b/fluere-plugin/Cargo.toml
@@ -14,7 +14,7 @@ repository = "https://github.com/SkuldNorniern/fluere"
 
 
 [dependencies]
-git2 = { version = "0.18.3", default-features = false, features = ["https", "vendored-libgit2", "vendored-openssl"] }
+git2 = { version = "0.18.3", default-features = false, features = ["https", "vendored-libgit2"]}
 tokio = { version = "1.36", features = ["full","macros", "rt-multi-thread"] }
 fluere-config = { version = "0.2.0", path = "../fluere-config" }
 #fluere-plugin-trait = { path = "../fluere-plugin-trait" }
